Working on Register action

--- a/templates/home/includes/main-menu.html.twig
+++ b/templates/home/includes/main-menu.html.twig
@@ -9,7 +9,7 @@
         <a class="item">Prix</a>
         <div class="right menu">
             <div class="item"><a class="ui button">Log in</a></div>
-            <div class="item"><a class="ui primary button">Sign Up</a></div>
+            <div class="item"><a class="ui primary button" href="{{ path('register') }}">Sign Up</a></div>
         </div>
     </div>
 </div>
@@ -22,5 +22,5 @@
     <a class="item">Careers</a>
 
     <a class="item">Login</a>
-    <a class="item">Signup</a>
+    <a class="item" href="{{ path('register') }}">Signup</a>
 </div>
