--- a/templates/home/includes/inbody-menu.html.twig
+++ b/templates/home/includes/inbody-menu.html.twig
@@ -14,7 +14,7 @@
 {#                <b>{{ app.user.firstname }} {{ app.user.lastname }}</b>#}
             {% else %}
                 <a class="ui inverted button">Connexion</a>
-                <a class="ui inverted button">Inscription</a>
+                <a class="ui inverted button" href="{{ path('register') }}">Inscription</a>
             {% endif %}
         </div>
     </div>
