--- a/templates/home/pages/home.html.twig
+++ b/templates/home/pages/home.html.twig
@@ -4,20 +4,9 @@
 
 <div class="pusher">
     <div class="ui inverted vertical masthead center aligned segment">
-{#        <div class="ui container">#}
-{#            <div class="ui large secondary inverted pointing menu">#}
-{#                <a class="toc item"><i class="sidebar icon"></i></a>#}
-{#                <a class="active item">Accueil1</a>#}
-{#                <a class="item">Work</a>#}
-{#                <a class="item">Company</a>#}
-{#                <a class="item">Careers</a>#}
-{#                <div class="right item">#}
-{#                    <a class="ui inverted button">Log in</a>#}
-{#                    <a class="ui inverted button">Sign Up</a>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
+
         {% include 'home/includes/inbody-menu.html.twig' %}
+
         <div class="ui text container">
             <h1 class="ui inverted header">Imagine-a-Company</h1>
             <h2>Do whatever you want when you want to.</h2>
@@ -46,6 +35,7 @@
                     <img
                             class="ui large bordered rounded image"
                             src="{{ asset('white-image.png', 'home_img') }}"
+                            alt="Image"
                     />
                 </div>
             </div>
@@ -68,7 +58,8 @@
                     <p>
                         <img
                                 class="ui avatar image"
-                                src="./static/images/avatar/nan.jpg"
+                                src="{{ asset('white-image.png', 'home_img') }}"
+                                alt="Image"
                         />
                         <b>Nan</b> Chief Fun Officer Acme Toys
                     </p>
