--- a/templates/home/includes/main-menu.html.twig
+++ b/templates/home/includes/main-menu.html.twig
@@ -3,24 +3,24 @@
 
 <div class="ui large top fixed hidden menu">
     <div class="ui container">
-        <a class="{% if currentPath is same as(path('home')) %}active {% endif %} item">Accueil2</a>
+        <a class="{% if currentPath is same as(path('home')) %}active {% endif %}item" href="{{ path('home') }}">Accueil1</a>
         <a class="item">Work</a>
         <a class="item">Company</a>
         <a class="item">Prix</a>
         <div class="right menu">
-            <div class="item"><a class="ui button">Log in</a></div>
-            <div class="item"><a class="ui primary button" href="{{ path('register') }}">Sign Up</a></div>
+            <div class="item"><a class="ui button" href="{{ path('login') }}">Connexion</a></div>
+            <div class="item"><a class="ui primary button" href="{{ path('register') }}">S'inscrire</a></div>
         </div>
     </div>
 </div>
 
 <!--Sidebar Menu-->
 <div class="ui vertical inverted sidebar menu">
-    <a class="{% if currentPath is same as(path('home')) %}active {% endif %} item">Accueil3</a>
+    <a class="{% if currentPath is same as(path('home')) %}active {% endif %}item" href="{{ path('home') }}">Accueil1</a>
     <a class="item">Work</a>
     <a class="item">Company</a>
     <a class="item">Careers</a>
 
-    <a class="item">Login</a>
-    <a class="item" href="{{ path('register') }}">Signup</a>
+    <a class="item" href="{{ path('login') }}">Connexion</a>
+    <a class="item" href="{{ path('register') }}">S'inscrire</a>
 </div>
