--- a/templates/parent-dashboard/pages/addChild.html.twig
+++ b/templates/parent-dashboard/pages/addChild.html.twig
@@ -6,12 +6,63 @@
 
 {% block content %}
 
-    {{ form_start(childForm) }}
-    {{ form_row(childForm.name) }}
-    {{ form_row(childForm.pseudo) }}
-    <i class="fa fa-info-circle" title="Le Nom d'aventurier servira à l'enfant pour se connecter et accéder à son Journal"></i>
-    {{ form_row(childForm.password) }}
-    <input type="submit" value="Ajouter" class="btn btn-primary">
-    {{ form_end(childForm) }}
+    <div class="box box-success">
+        <div class="box-body">
+
+            {{ form_start(childForm) }}
+{#            {{ form(childForm, {'attr':{'class':'form-horizontal'}}) }}#}
+            <div class="form-group">
+                {{ form_row(childForm.name) }}
+            </div>
+            <div class="form-group">
+                {{ form_row(childForm.pseudo) }}
+            </div>
+            <div class="form-group">
+                {{ form_row(childForm.password) }}
+            </div>
+            <input type="submit" value="Ajouter" class="btn btn-primary">
+            {{ form_end(childForm) }}
+
+        </div>
+    </div>
+{#    <i class="fa fa-info-circle" title="Le Nom d'aventurier servira à l'enfant pour se connecter et accéder à son Journal"></i>#}
+
+
+{#    <div class="box box-success">#}
+{#        <div class="box-header with-border">#}
+{#            #}{#        <h3 class="box-title">Different Height</h3>#}
+{#        </div>#}
+{#        <div class="box-body">#}
+{#            <input class="form-control input-lg" type="text" placeholder=".input-lg">#}
+{#            <br>#}
+{#            <input class="form-control" type="text" placeholder="Default input">#}
+{#            <br>#}
+{#            <input class="form-control input-sm" type="text" placeholder=".input-sm">#}
+{#        </div>#}
+{#        <!-- /.box-body -->#}
+{#    </div>#}
 
 {% endblock content %}
+
+{% block stylesheets %}
+    <style>
+        ul {
+            list-style: none;
+            margin-left:0;
+            padding-left:0;
+        }
+        .form-group>ul>li {
+            color: red;
+        }
+        .form-group>ul>li:before {
+            content: "Erreur";
+            color: white;
+            background-color: #f44;
+            padding: 0 2px;
+            border-radius: 3px;
+            margin-right: 5px;
+        }
+    </style>
+{% endblock stylesheets %}
+
+
