--- a/templates/parent-dashboard/pages/addChild.html.twig
+++ b/templates/parent-dashboard/pages/addChild.html.twig
@@ -51,16 +51,17 @@
             margin-left:0;
             padding-left:0;
         }
-        .form-group>ul>li {
+        .form-group ul>li {
             color: red;
         }
-        .form-group>ul>li:before {
+        .form-group ul>li:before {
             content: "Erreur";
             color: white;
             background-color: #f44;
-            padding: 0 2px;
+            padding: 1px 3px;
             border-radius: 3px;
             margin-right: 5px;
+            font-weight: bold;
         }
     </style>
 {% endblock stylesheets %}
