--- a/templates/parent-dashboard/base.html.twig
+++ b/templates/parent-dashboard/base.html.twig
@@ -157,7 +157,7 @@ desired effect
 
                 <!-- Onglet Enfants -->
                 <li class="treeview {% if currentPath is same as(path('dashboard')) %}active{% endif %}">
-                    <a href="#"><i class="fa fa-child"></i> <span>Mes enfants</span>
+                    <a href="{{ path('dashboard') }}"><i class="fa fa-child"></i> <span>Mes enfants</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                         </span>
