Create LevelService | Declared in Twig

--- a/templates/parent-dashboard/pages/one-child.html.twig
+++ b/templates/parent-dashboard/pages/one-child.html.twig
@@ -29,7 +29,7 @@
 
                         <ul class="list-group list-group-unbordered">
                             <li class="list-group-item">
-                                <b>Niveau</b> <a class="pull-right">A FAIRE</a>
+                                <b>Niveau</b> <a class="pull-right">{{ lv.infosFromExp(child.exp).level }}</a>
                             </li>
                             <li class="list-group-item">
                                 <b>Quêtes en cours</b> <a class="pull-right">A FAIRE</a>
