--- a/templates/parent-dashboard/pages/one-child.html.twig
+++ b/templates/parent-dashboard/pages/one-child.html.twig
@@ -32,10 +32,18 @@
                                 <b>Niveau</b> <a class="pull-right">{{ lv.infosFromExp(child.exp).level }}</a>
                             </li>
                             <li class="list-group-item">
-                                <b>Quêtes en cours</b> <a class="pull-right">A FAIRE</a>
+                                {% set currentQuests = 0 %}
+                                {% for q in child.quests if q.status == 1 %}
+                                    {% set currentQuests = currentQuests +1 %}
+                                {% endfor %}
+                                <b>Quêtes en cours</b> <a class="pull-right">{{ currentQuests }}</a>
                             </li>
                             <li class="list-group-item">
-                                <b>Quêtes réalisées</b> <a class="pull-right">A FAIRE</a>
+                                {% set realisedQuests = 0 %}
+                                {% for q in child.quests if q.status == 3 or q.status == 4 %}
+                                    {% set realisedQuests = realisedQuests +1 %}
+                                {% endfor %}
+                                <b>Quêtes réalisées</b> <a class="pull-right">{{ realisedQuests }}</a>
                             </li>
                         </ul>
 
@@ -104,15 +112,17 @@
                                     <!-- Quete -->
                                     <div class="post">
                                         <div class="user-block">
+                                            <img class="img-circle img-bordered-sm" src="" alt="user image" style="background-color: red">
+
                                             <span class="username">
-                                              <a href="#">Nom quete</a>
+                                              <a href="#">{{ q.title }}</a>
                                             </span>
-                                            <span class="description">Description quête</span>
+                                            <span class="description">{{ q.description }}</span>
                                         </div>
                                         <!-- /.user-block -->
                                         <ul>
                                             <li>Statut</li>
-                                            <li>Date quete assignée</li>
+                                            <li>Assignée le <b>{{ q.assignatedDate | date("d/m/Y")}}</b> à <b>{{ q.assignatedDate | date("H:i") }}</b></li>
                                             <li>Date rendue si rendue</li>
 
                                         </ul>
@@ -227,55 +237,59 @@
                         <!-- ONLGET OPTIONS -->
                         <div class="tab-pane" id="settings">
                             <form class="form-horizontal">
-                                <div class="form-group">
-                                    <label for="inputName" class="col-sm-2 control-label">Name</label>
 
-                                    <div class="col-sm-10">
-                                        <input type="email" class="form-control" id="inputName" placeholder="Name">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="inputEmail" class="col-sm-2 control-label">Email</label>
-
-                                    <div class="col-sm-10">
-                                        <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="inputName" class="col-sm-2 control-label">Name</label>
-
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="inputName" placeholder="Name">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="inputExperience" class="col-sm-2 control-label">Experience</label>
-
-                                    <div class="col-sm-10">
-                                        <textarea class="form-control" id="inputExperience" placeholder="Experience"></textarea>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="inputSkills" class="col-sm-2 control-label">Skills</label>
-
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="inputSkills" placeholder="Skills">
-                                    </div>
-                                </div>
+                                {{ form_start(childForm) }}
+                                {{ form_widget(childForm) }}
                                 <div class="form-group">
                                     <div class="col-sm-offset-2 col-sm-10">
-                                        <div class="checkbox">
-                                            <label>
-                                                <input type="checkbox"> I agree to the <a href="#">terms and conditions</a>
-                                            </label>
-                                        </div>
+                                        <button type="submit" class="btn btn-primary">Modifier</button>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <div class="col-sm-offset-2 col-sm-10">
-                                        <button type="submit" class="btn btn-danger">Submit</button>
-                                    </div>
-                                </div>
+                                {{ form_end(childForm) }}
+{#                                <div class="form-group">#}
+{#                                    <label for="inputName" class="col-sm-2 control-label">Name</label>#}
+
+{#                                    <div class="col-sm-10">#}
+{#                                        <input type="email" class="form-control" id="inputName" placeholder="Name">#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <div class="form-group">#}
+{#                                    <label for="inputEmail" class="col-sm-2 control-label">Email</label>#}
+
+{#                                    <div class="col-sm-10">#}
+{#                                        <input type="email" class="form-control" id="inputEmail" placeholder="Email">#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <div class="form-group">#}
+{#                                    <label for="inputName" class="col-sm-2 control-label">Name</label>#}
+
+{#                                    <div class="col-sm-10">#}
+{#                                        <input type="text" class="form-control" id="inputName" placeholder="Name">#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <div class="form-group">#}
+{#                                    <label for="inputExperience" class="col-sm-2 control-label">Experience</label>#}
+
+{#                                    <div class="col-sm-10">#}
+{#                                        <textarea class="form-control" id="inputExperience" placeholder="Experience"></textarea>#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <div class="form-group">#}
+{#                                    <label for="inputSkills" class="col-sm-2 control-label">Skills</label>#}
+
+{#                                    <div class="col-sm-10">#}
+{#                                        <input type="text" class="form-control" id="inputSkills" placeholder="Skills">#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <div class="form-group">#}
+{#                                    <div class="col-sm-offset-2 col-sm-10">#}
+{#                                        <div class="checkbox">#}
+{#                                            <label>#}
+{#                                                <input type="checkbox"> I agree to the <a href="#">terms and conditions</a>#}
+{#                                            </label>#}
+{#                                        </div>#}
+{#                                    </div>#}
+{#                                </div>#}
                             </form>
                         </div>
                         <!-- /.tab-pane -->
