--- a/templates/parent-dashboard/pages/one-child.html.twig
+++ b/templates/parent-dashboard/pages/one-child.html.twig
@@ -112,7 +112,7 @@
                                     <!-- Quete -->
                                     <div class="post">
                                         <div class="user-block">
-                                            <img class="img-circle img-bordered-sm" src="" alt="user image" style="background-color: red">
+                                            <img class="img-circle img-bordered-sm" src="" alt="status" style="background-color: red">
 
                                             <span class="username">
                                               <a href="#">{{ q.title }}</a>
@@ -123,7 +123,11 @@
                                         <ul>
                                             <li>Statut</li>
                                             <li>Assignée le <b>{{ q.assignatedDate | date("d/m/Y")}}</b> à <b>{{ q.assignatedDate | date("H:i") }}</b></li>
-                                            <li>Date rendue si rendue</li>
+
+                                            {% if q.status >= 2 %}
+                                                <li>Rendue le <b>{{ q.returnDate | date("d/m/Y")}}</b> à <b>{{ q.returnDate | date("H:i") }}</b></li>
+                                            {% endif %}
+
 
                                         </ul>
                                     </div>
