--- a/templates/parent-dashboard/pages/notifications.html.twig
+++ b/templates/parent-dashboard/pages/notifications.html.twig
@@ -6,25 +6,31 @@
 
 {% block content %}
 
-    {% for n in user.notifications %}
-        <div class="col-md-3">
-            <div class="box box-success box-solid">
-                <div class="box-header with-border">
-                    <h3 class="box-title">{{ n.title }}</h3>
+    {% if user.notifications | length > 0 %}
+        {% for n in user.notifications %}
+            <div class="col-md-3">
+                <div class="box box-success box-solid">
+                    <div class="box-header with-border">
+                        <h3 class="box-title">{{ n.title }}</h3>
 
-                    <div class="box-tools pull-right">
-                        <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                        <div class="box-tools pull-right">
+                            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                        </div>
+                        <!-- /.box-tools -->
                     </div>
-                    <!-- /.box-tools -->
+                    <!-- /.box-header -->
+                    <div class="box-body">
+                        {{ n.message }}
+                    </div>
+                    <!-- /.box-body -->
                 </div>
-                <!-- /.box-header -->
-                <div class="box-body">
-                    {{ n.message }}
-                </div>
-                <!-- /.box-body -->
+                <!-- /.box -->
             </div>
-            <!-- /.box -->
-        </div>
-    {% endfor %}
+        {% endfor %}
+    {% else %}
+        <p>
+            Aucune notification
+        </p>
+    {% endif %}
 
 {% endblock content %}
