--- a/templates/parent-dashboard/pages/one-child.html.twig
+++ b/templates/parent-dashboard/pages/one-child.html.twig
@@ -350,8 +350,8 @@
                 margin: auto;
             }
 
-            span.quest-status.valid { color: #108009}
+            span.quest-status.valid { color: #77cc77}
             span.quest-status.assignated { color: #FF8D2B }
-            span.quest-status.fail { color: #FF2929 }
+            span.quest-status.fail { color: #ff6961 }
         </style>
     {% endblock stylesheets %}
