--- a/templates/parent-dashboard/pages/one-child.html.twig
+++ b/templates/parent-dashboard/pages/one-child.html.twig
@@ -139,7 +139,7 @@
                                 {% endfor %}
                             {% else %}
                                 Aucune quête à afficher <br>
-                                <a href="">Créer une nouvelle quête</a>
+                                <a href="{{ path('dashboard-quests') }}">Créer une nouvelle quête</a>
                             {% endif %}
                         </div>
                         <!-- /.tab-pane -->
