--- a/templates/home/base.html.twig
+++ b/templates/home/base.html.twig
@@ -21,6 +21,8 @@
 
         {% block body %}{% endblock %}
 
+        {% include 'home/includes/home-footer.html.twig' %}
+
         {% block javascripts %}
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.js"></script>
