--- a/templates/home/pages/home.html.twig
+++ b/templates/home/pages/home.html.twig
@@ -8,41 +8,39 @@
         {% include 'home/includes/inbody-menu.html.twig' %}
 
         <div class="ui text container">
-{#            <h1 class="ui inverted header">Imagine-a-Company</h1>#}
+            <h1 class="ui inverted header">Quest Titre</h1>
 {#            <h2>Do whatever you want when you want to.</h2>#}
 {#            <div class="ui huge primary button">#}
-            <div class="ui massive primary icon circular button">
-                 <i class="right book icon"></i>
-            </div>
+{#            <div class="ui massive primary icon circular button">#}
+{#                 <i class="right book icon"></i>#}
+
+{#            </div>#}
+            
+            <a href="{{ path('quest-book') }}" id="quest-book-btn" class="ui circular inverted button" title="Ouvrir mon journal de quêtes">
+                <img src="{{ asset('book_icon.PNG', 'home_img') }}" alt="Image livre">
+            </a>
         </div>
     </div>
     <div class="ui vertical stripe segment">
         <div class="ui middle aligned stackable grid container">
             <div class="row">
                 <div class="eight wide column">
-                    <h3 class="ui header">We Help Companies and Companions</h3>
+                    <h3 class="ui header">Assignez des quêtes à vos enfants ...</h3>
                     <p>
-                        We can give your company superpowers to do things that they
-                        never thought possible. Let us delight your customers and
-                        empower your needs...through pure data analytics.
+                        Créez des quêtes personnalisées et donnez-les à vos enfants
                     </p>
-                    <h3 class="ui header">We Make Bananas That Can Dance</h3>
+                    <h3 class="ui header">Puis validez-les ou non !</h3>
                     <p>
-                        Yes that's right, you thought it was the stuff of dreams, but
-                        even bananas can be bioengineered.
+                        Si la quête a été réalisée avec succès, votre enfants gagnera des points d'expérience, des images de profil et bien plus encore !
                     </p>
                 </div>
                 <div class="six wide right floated column">
                     <img
                             class="ui large bordered rounded image"
-                            src="{{ asset('white-image.png', 'home_img') }}"
+                            src="https://cdn3.iconfinder.com/data/icons/fantasy-and-role-play-game-adventure-quest/512/King-512.png"
                             alt="Image"
                     />
-                </div>
-            </div>
-            <div class="row">
-                <div class="center aligned column">
-                    <a class="ui huge button">Check Them Out</a>
+
                 </div>
             </div>
         </div>
@@ -91,39 +89,6 @@
             <a class="ui large button">I'm Still Quite Interested</a>
         </div>
     </div>
-    <div class="ui inverted vertical footer segment">
-        <div class="ui container">
-            <div
-                    class="ui stackable inverted divided equal height stackable grid"
-            >
-                <div class="three wide column">
-                    <h4 class="ui inverted header">About</h4>
-                    <div class="ui inverted link list">
-                        <a class="item" href="#root">Sitemap</a>
-                        <a class="item" href="#root">Contact Us</a>
-                        <a class="item" href="#root">Religious Ceremonies</a>
-                        <a class="item" href="#root">Gazebo Plans</a>
-                    </div>
-                </div>
-                <div class="three wide column">
-                    <h4 class="ui inverted header">Services</h4>
-                    <div class="ui inverted link list">
-                        <a class="item" href="#root">Banana Pre-Order</a>
-                        <a class="item" href="#root">DNA FAQ</a>
-                        <a class="item" href="#root">How To Access</a>
-                        <a class="item" href="#root">Favorite X-Men</a>
-                    </div>
-                </div>
-                <div class="seven wide column">
-                    <h4 class="ui inverted header">Footer Header</h4>
-                    <p>
-                        Extra space for a call to action inside the footer that could
-                        help re-engage users.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 {% endblock body %}
@@ -131,11 +96,37 @@
 {% block stylesheets %}
     {{ parent() }}
     <style>
+
+        @font-face {
+            font-family: "Fantasy1";
+            src: url("{{ asset('Fantasy1.ttf', 'custom_fonts') }}");
+        }
+
+        h1 {
+
+            font-family: "Fantasy1", Lato, "Helvetica Neue", sans-serif !important;
+            font-size: 6em !important;
+            margin-top: 0.5em !important;
+            margin-bottom: 0.5em !important;
+        }
+
         #header-div {
-            background-image: url({{ asset('com_fire_cave.png', 'home_img') }});
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center top;
+            {#background-image: url({{ asset('com_fire_cave.png', 'home_img') }});#}
+            /*background-size: cover;*/
+            /*background-repeat: no-repeat;*/
+            /*background-position: center top;*/
+        }
+
+        #quest-book-btn {
+            height: 250px;
+            width: 250px;
+            margin-bottom: 2em;
+        }
+
+        #quest-book-btn img {
+            height: 90%;
+            width: 90%;
+            margin: 15px;
         }
 
         #main-menu>div {
