--- a/templates/home/includes/inbody-menu.html.twig
+++ b/templates/home/includes/inbody-menu.html.twig
@@ -5,10 +5,9 @@
 <div class="ui container" id="main-menu">
     <div class="ui large secondary inverted pointing menu">
         <a class="toc item"><i class="sidebar icon"></i></a>
-        <a class="{% if currentPath is same as(path('home')) %}active {% endif %}item" href="{{ path('home') }}">Accueil1</a>
-        <a class="item">Work</a>
-        <a class="item">Company</a>
-        <a class="item">Careers</a>
+        <a class="{% if currentPath is same as(path('home')) %}active {% endif %}item" href="{{ path('home') }}">Accueil</a>
+        <a class="item">C'est quoi ?</a>
+        <a class="item">Plans</a>
         <div class="right item">
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 <a class="ui inverted labeled icon button blue" href="{{ path('dashboard') }}"><i class="columns icon"></i>{{ app.user.name }}</a>
