--- a/templates/parent-dashboard/pages/my-children.html.twig
+++ b/templates/parent-dashboard/pages/my-children.html.twig
@@ -7,7 +7,61 @@
 {% block content %}
 
     {% for c in user.children %}
-        {{ c.name }}
+
+
+        {% set currentQuests = 0 %}
+        {% for q in c.quests if q.status == 1 %}
+            {% set currentQuests = currentQuests +1 %}
+        {% endfor %}
+
+        {% set realisedQuests = 0 %}
+        {% for q in c.quests if q.status == 3 or q.status == 4 %}
+            {% set realisedQuests = realisedQuests +1 %}
+        {% endfor %}
+
+
+            <div class="col-md-4">
+                <div class="box box-widget widget-user-2">
+                    <a href="{{ path('one-child', {adventurer: c.pseudo}) }}">
+                    <!-- Add the bg color to the header using any of the bg-* classes -->
+                        <div class="widget-user-header bg-aqua">
+                            <div class="widget-user-image">
+                                <img class="img-circle" src="https://cdn3.iconfinder.com/data/icons/fantasy-and-role-play-game-adventure-quest/512/King-512.png" alt="Child Avatar">
+                            </div>
+                            <!-- /.widget-user-image -->
+                            <h3 class="widget-user-username">{{ c.name }}</h3>
+                            <h5 class="widget-user-desc">{{ c.pseudo }}</h5>
+                        </div>
+                    </a>
+                    <div class="box-footer no-padding">
+                        <ul class="nav nav-stacked">
+                            <li>Niveau <span class="pull-right">{{ lv.infosFromExp(c.exp).level }}</span></li>
+                            <li>Quêtes en cours <span class="pull-right">{{ currentQuests }}</span></li>
+                            <li>Quêtes réalisées <span class="pull-right">{{ realisedQuests }}</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
     {% endfor %}
 
 {% endblock content %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <style>
+        .nav-stacked>li {
+            border-radius: 0;
+            border-top: 0;
+            border-left: 3px solid transparent;
+            color: #444;
+            position: relative;
+            display: block;
+            padding: 10px 15px;
+        }
+        div.widget-user-header:hover {
+            background-color: #00a0cd !important;
+        }
+    </style>
+{% endblock %}
